README.md + refactor update